pProbe config create request
Change-Id: I785d6535c8e20f569ea303aa24e42a280d5014f4
Issue-ID: VID-133
Signed-off-by: Ofir Sonsino <os0695@att.com>